--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "nodejs-npm-basic",
   "version": "1.0.0",
-  "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./write": "./write.js"
+  },
   "type": "module",
   "scripts": {
+    "prestart": "echo 'Before application start",
+    "start": "node index.js",
+    "poststart": "echo 'After application start",
+    "run": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Farid Azhari Nurcahyo",
